docs/versioned_docs/version-3.0/spaces/_partials/sleep/advanced-configuration.mdx

### Exclude Resources From Sleep
<p>Loft allows you to specify resources that should not sleep within a space by providing the annotation <code>sleepmode.loft.sh/exclude: 'true'</code> on either a <code>Deployment</code>, <code>StatefulSet</code>, <code>ReplicaSet</code> or <code>Pod</code>. For example the following <code>Deployment</code> would not sleep if the space is sleeping:</p>

```yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  annotations:
    sleepmode.loft.sh/exclude: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: busybox
          image: busybox
          command:
            - sleep
            - '3600'
```

### Long-Living Connections

<p>It's possible that certain requests such as <code>kubectl exec</code> or <code>kubectl port-forward</code> keep an active connection open to the {props.name} that prevents it from sleeping. This is in most cases wanted since the {props.name} shouldn't start sleeping when someone is still clearly using it, however there are cases where the connection might be idle (someone left the laptop open, but is not using it anymore) in which you want to terminate such connections and put the {props.name} to sleep.</p>
<p>There are multiple ways to approach this problem of active connections preventing a {props.name} from sleeping:</p>
<ol>
<li>You can tell loft to timeout idle streaming connections (such as <code>kubectl exec</code>, <code>kubectl port-forward</code> etc.) after a certain time period with the annotation <code>loft.sh/streaming-connection-idle-timeout: '3600'</code> on a **cluster**. With this annotation set, loft will close connections automatically that are idle after the given seconds. By default, Loft will not timeout any connections. This will only apply to new opened connections to that cluster and not affect already running connections.</li>
<figure class="frame">
    <img src="/docs/media/v1/ui/sleep-mode/sleep-mode-annotations.png" alt="Display Sleep Mode Information" />
    <figcaption>Set annotation on cluster</figcaption>
</figure>

<li>Tell loft to ignore all active connections for determining {props.name} activity via the annotation <code>sleepmode.loft.sh/ignore-active-conntections: 'true'</code>. This will put a {props.name} to sleep even though there still might be open connections such as <code>kubectl exec</code> or <code>kubectl port-forward</code>.</li>
<li>Configure your kubelets with the flag <code>--streaming-connection-idle-timeout duration</code>(see <a href="https://kubernetes.io/docs/reference/command-line-tools-reference/kubelet/">docs</a>). This behaves essentially as option 1, however this configuration is Loft independent.</li>
</ol>
